# fract_gen

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  main.cpp
assets/config/: default_config.json
assets/palettes/: candy.json  fire.json  fire_bl_re_ye_wh.json  forest.json  ice.json  lava.json  neon.json  ocean.json  rainbow.json  sunset.json  twilight.json
include/: color_rgb.hpp  custom_logger.hpp  extension_conver.hpp  fractal.hpp  img_writer.hpp  json.hpp  palette.hpp  stb_image_write.h
src/: color.cpp  extension_conver.cpp  fractal.cpp  img_writer.cpp  palette.cpp
